<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home_admin">

    <fragment
        android:id="@+id/nav_home_admin"
        android:name="com.example.fyp.ui_admin.admin_home.AdminHomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_admin_home" />

    <fragment
        android:id="@+id/nav_admin_viewUserNumber"
        android:name="com.example.fyp.ui_admin.admin_viewUserStatistics.admin_viewUserStatisticsFragment"
        android:label="@string/admin_viewUserStatistics"
        tools:layout="@layout/fragment_admin_view_user_statistics" />
    <fragment
        android:id="@+id/nav_admin_viewFeebackRating"
        android:name="com.example.fyp.ui_admin.admin_viewRatingFeedback.adminViewFeedbackRatingFragment"
        android:label="@string/admin_viewFeedbackRating"
        tools:layout="@layout/fragment_admin_view_feedback_rating" />
    <fragment
        android:id="@+id/nav_admin_viewComplaints"
        android:name="com.example.fyp.ui_admin.admin_viewComplaint.adminViewComplaintFragment"
        android:label="@string/admin_viewComplaints"
        tools:layout="@layout/fragment_admin_view_complaint" />

</navigation>