<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fyp.ui_customer.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.example.fyp.ui_customer.CustomerOrdersList.CustOrdersMainListFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_menu_custorderslist" />

    <fragment
        android:id="@+id/nav_toolslist"
        android:name="com.example.fyp.ui_customer.Tools.ToolsFragment"
        android:label="Tools"
        tools:layout="@layout/fragment_tools_list" />

    <fragment
        android:id="@+id/nav_cust_profile"
        android:name="com.example.fyp.ui_customer.Setting.EditProfileFragment"
        android:label="@string/menu_profile_setting"
        tools:layout="@layout/fragment_edit_profile" />
</navigation>